Home, footer, animations, other scafoolding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <!--Container  for nav-bar and top-nav component rendering within the div-->
 <!-- <div id="navContainer">
   <top-nav></top-nav>
+  <top-menu clickOutside></top-menu>
 </div> -->
 
 <!--Root div container with the router-outlet rendering page components within the div-->
@@ -11,6 +12,6 @@
 </div>
 
 <!--Footer Container with the footer component rendering within the div-->
-<!-- <div id="footerContainer">
-  <footer></footer>
-</div> -->
+<div id="footerContainer">
+  <app-footer></app-footer>
+</div>
