nav menu working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 
 
 <!--Container  for nav-bar and top-nav component rendering within the div-->
-<!-- <div id="navContainer">
-  <top-nav></top-nav>
-  <top-menu clickOutside></top-menu>
-</div> -->
+<div id="navContainer">
+  <!-- <nav-menu clickOutside></nav-menu> -->
+  <nav-menu ></nav-menu>
+</div>
 
 <!--Root div container with the router-outlet rendering page components within the div-->
 <div id="root">
