fixed animations. Still no clickOutside function but skipping

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- </div> -->
 
 <!--Root div container with the router-outlet rendering page components within the div-->
-<div id="root">
+<div id="router">
   <router-outlet></router-outlet>
 </div>
 
