--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -10,29 +10,23 @@
           <article>
             <h3>Jacob Johnston</h3>
             <p>
-              A lover of science and technology, soaking up all the coolest new web development tools and methodologies. Jacob takes great
-              pleasure in creating powerful, dynamic web applications and beautiful, intuitive interfaces.
+              He's a lover of science and technology, soaking up all the latest and greatest web development and design tools, trends, and methodologies. Jacob takes great pleasure in creating powerful, performant, dynamic web applications and beautiful, intuitive user interfaces. He also has a degree in entrepreneurship (yeah, that's a thing these days) and is always following case studies and the latest findings about what works and doesn't for startups and growing businesses.
             </p>
   
             <p>
-              He's done years of data science for big names like Intel and Nike. He learned a lot about displaying, interacting with, and
-              analyzing data in intuitive, user-friendly ways that even an executive can indulge in. Over time he realized
-              that what he loved most was creating things that people use and making the information and resources on the web
-              more fun and enlightening.
+              After spending a few years doing data science for big names like Intel and Nike, he realized the best part of that job was designing and programming useful automations and interfaces for other analysts and data scientists to leverage in their work. Turns out, he just loves creating things that people find useful and aesthetically appealing. Still, he gets especially enthused when there's the potential to aggregate lots of data into fun and enlightening resources for user consumption.
             </p>
   
             <p>
-              So, he got into web application development, making tools for big and small companies along with philanthropic non-profits.
-              The tools help them better manage their resources, save time and money, and make lives easier and more fulfilling.
+              Jacob's other core passion is entrepreneurship. Growing up, he wanted to be an "inventor" but realized all the great scientists and inventors he most admired shared a common thread of entrepreneurial zeal and talent, so figured he'd shift his major from computer science to entrepreneurship since his school was one of the first to offer this as a concentration. He has worked with companies big and small and seen what works and doesn’t, and even started a couple ventures himself. He spends a lot of time reading up on the latest studies and findings about the often counterintuitive science, art, and discipline of technology entrepreneurship.
             </p>
   
             <p>
-              Then he had another revelation: what's important is making peoples' lives better with the skills and knowledge he has gained
-              over the years. It's fun and he wants to do it for you.
+              His greatest offering is in early-stage concept validation, prototyping, and entrepreneurial consulting. By combining his understanding of programming and application architecture, his instinct for great design, and his foundation in the world of entrepreneurship, he can help ensure that your business gets off to a solid start or sales smoothly through a tough growth spurt. Have a great idea, entrepreneurial urges, and access to resources but still not making the progress you want? Jacob can help.
             </p>
   
             <p>
-              All he wants right now is to help make <strong>your business</strong> better with tools and applications.
+              His favorite thing to do today is help make <strong>your business</strong> better with tools and applications, or just help you get it off the ground in the first place.
             </p>
           </article>
         </section>
