--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
   <h1 class="page-header">CONTACT</h1>
   <hr>
   <p class="contacttext">
-    info.flight.run@gmail.com | Portland, OR
+    info@flight.run | SW Portland, OR
   </p>
 
   <form [formGroup]="form" autocomplete="off" novalidate class="lesson-form">
