--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,10 +13,10 @@ SECTION 1.1 - HERO IMAGE/PAGE TITLE
         <div id="jumbo-container">
           <div class="col-sm-12 jumbotron">
             <p>
-              <a routerLink="../about">JACOB JOHNSTON &#58; TRICIA MENDOZA</a>
+              <!-- <a routerLink="../about">JACOB JOHNSTON &#58; TRICIA MENDOZA</a> -->
             </p>
             <h1 id="homeHeading">FLIGHT</h1>
-            <p>&#123; &#123; A WEB DEV &amp; DESIGN TEAM &#125; &#125;</p>
+            <p>&#123; &#123; WEB DEV &amp; DESIGN | ENTREPRENEURIAL CONSULTING &#125; &#125;</p>
           </div>
         </div>
 
@@ -44,7 +44,7 @@ SECTION 1.2 - OVERVIEW
 
 <section class="darkBGtitle" id="overview">
   <h2>WE DO AWESOME RIGHT</h2>
-  <h4 id="awesome-p">A passionate designer and an enthusiastic full-stack developer</h4>
+  <h4 id="awesome-p">A boutique web development and design agency offering startup and entrepreneurial consulting</h4>
   <h3 id="awesome-h3" class="italic">. . . at your service . . .</h3>
   <!--<hr>-->
   <div class="equidistant-container">
@@ -73,8 +73,9 @@ SECTION 1.2 - OVERVIEW
       </div>
       <h3>Apps &amp; Tools</h3>
       <p>
-        Powerful, snappy, data-driven apps and tools help you and your people get the job done better and faster. You'd be surprised
-        where a simple application can make a big impact in your business or workflow.
+        Powerful, snappy, data-driven apps and tools help you and your people get the job done better and faster.
+        Cloud-based, performant, and as simple or intricate as needed. From rapid prototyping to enterprise scale.
+        <!-- You'd be surprised where a simple application can make a big impact in your business or workflow. -->
       </p>
     </a>
   </div>
