Updates to the apps/examples

--- a/src/app/components/apps/apps.component.html
+++ b/src/app/components/apps/apps.component.html
@@ -1,5 +1,56 @@
 <div id="apps-container" class="darktheme page-container">
   
+    <h1 class="page-header">LINKS &amp; SAMPLES</h1>
+    <hr>
+    <section id="external-links">
+      <h3>Some stuff to click around at</h3>
+      <h4>marketing sites for ODA:</h4>
+      <p>(we also did all the icons and graphics custom from scratch)</p>
+      <ul class="link-list">
+        <li>
+          <a href="https://www.site.work/">core marketing site</a>
+        </li>
+        <li>
+            <a href="https://www.site.work/rentals">equipment rentals</a>
+        </li>
+        <li>
+            <a href="https://www.site.work/stays">workforce accomodations and lodging</a>
+        </li>
+        <li>
+            <a href="https://www.site.work/forecast">accomodations forecasting services</a>
+        </li>
+        <li>
+            <a href="https://www.site.work/customize">generic "coming soon" site</a>
+        </li>
+      </ul>
+
+      <h4>Some contributions to the greater community:</h4>
+      <p>(mostly works in progress)</p>
+      <ul class="link-list">
+        <li>
+          <a href="https://scatterschool-dev.firebaseapp.com/">an open knowledge sharing network</a>
+        </li>
+        <li>
+          <a href="https://aid2assist-dev.firebaseapp.com/home">a direct charity donation service</a>
+        </li>
+        <li>
+          <a href="https://csscolormixer.com/">a fun and useful tool/game for designers</a>
+        </li>
+      </ul>
+
+      <p>Some of our more corporate clients:</p>
+      <ul class="link-list">
+        <li>
+          <a href="http://www.tstoregon.com/">Terraspatial Technologies</a>
+          <p>We've provided extensive consulting services, app updates, and helped bring some legacy projects into the light of the future</p>
+        </li>
+        <li>
+          <a href="http://www.ondemandanalysis.com/">On Demand Analysis</a>
+          <p>We've built two of their production apps, all of their core marketing materials, designed logos, and worked on various app updates</p>
+        </li>
+      </ul>
+
+    </section>
     <h1 class="page-header">APPS &amp; TOOLS</h1>
     <hr>
     <section>
