Put examples in accordion Would like to replace these material design expansion panels

--- a/src/app/components/apps/apps.component.html
+++ b/src/app/components/apps/apps.component.html
@@ -54,107 +54,119 @@
     <h1 class="page-header">APPS &amp; TOOLS</h1>
     <hr>
     <section>
+      
       <p>Some apps and tools that saved time and made life better for clients</p>
   
       <br>
-  
-      <div class="carouselset">
-        <div class="app-header">
-          <h3>Community Warehouse</h3>
-          <p>Filter functionality examples:</p>
-        </div>
-        <div class="carousel-wrapper">
-          <carousel [interval]="6000" [noWrap]="false">
-            <slide class="carousel-slide" *ngFor="let slide of cwHomeSlides; let index=index" [active]="slide.active">
-              <img [src]="slide.image" [alt]="slide.alt">
-              <div class="carousel-caption">
-                <h4>{{ slide.text }}</h4>
+      <accordion closeOthers="true">
+        <accordion-group #cwGroup heading="Community Warehouse">
+            <!-- <accordion-group #cwGroup (isOpenChange)="openChange($event, cwGroup)" heading="Community Warehouse"> -->
+          <accordion *ngIf="cwGroup._isOpen" closeOthers="true">
+            <accordion-group heading="Filter functionality examples">
+                <div class="carouselset">
+                    <!-- <div class="app-header">
+                      <p>Filter functionality examples:</p>
+                    </div> -->
+                    <div class="carousel-wrapper">
+                      <carousel [interval]="6000" [noWrap]="false">
+                        <slide class="carousel-slide" *ngFor="let slide of cwHomeSlides; let index=index" [active]="slide.active">
+                          <img [src]="slide.image" [alt]="slide.alt">
+                          <div class="carousel-caption">
+                            <h4>{{ slide.text }}</h4>
+                          </div>
+                        </slide>
+                      </carousel>
+                    </div>
+                  </div>
+            </accordion-group>
+            <accordion-group heading="Clean customer process forms">
+                <div class="carouselset">
+                    <!-- <div class="header sub-header">
+                      <p>Clean customer process forms:</p>
+                    </div> -->
+                    <div class="carousel-wrapper">
+                      <carousel [interval]="6000" [noWrap]="false">
+                        <slide class="carousel-slide" *ngFor="let slide of cwLockSlides; let index=index" [active]="slide.active">
+                          <img [src]="slide.image" [alt]="slide.alt">
+                          <div class="carousel-caption">
+                            <h4>{{ slide.text }}</h4>
+                          </div>
+                        </slide>
+                      </carousel>
+                    </div>
+                  </div>
+            </accordion-group>
+            <accordion-group heading="Detail forms">
+                <div class="carouselset">
+                    <!-- <div class="header sub-header">
+                      <p>Detail forms:</p>
+                    </div> -->
+                    <div class="carousel-wrapper">
+                      <carousel [interval]="6000" [noWrap]="false">
+                        <slide class="carousel-slide" *ngFor="let slide of cwDetailSlides; let index=index" [active]="slide.active">
+                          <img [src]="slide.image" [alt]="slide.alt">
+                          <div class="carousel-caption">
+                            <h4>{{ slide.text }}</h4>
+                          </div>
+                        </slide>
+                      </carousel>
+                    </div>
+                  </div>
+            </accordion-group>
+            <accordion-group heading="Data maintenance forms">
+                <div class="carouselset">
+                    <!-- <div class="header sub-header">
+                      <p>Data maintenance forms:</p>
+                    </div> -->
+                    <div class="carousel-wrapper">
+                      <carousel [interval]="6000" [noWrap]="false">
+                        <slide class="carousel-slide" *ngFor="let slide of cwMaintenanceSlides; let index=index" [active]="slide.active">
+                          <img [src]="slide.image" [alt]="slide.alt">
+                          <div class="carousel-caption">
+                            <h4>{{ slide.text }}</h4>
+                          </div>
+                        </slide>
+                      </carousel>
+                    </div>
+                  </div>
+            </accordion-group>
+          </accordion>
+            
+        </accordion-group>
+        <accordion-group #oilCampGroup heading="Oil Camp Attendant">
+            <div *ngIf="oilCampGroup._isOpen" class="carouselset">
+                <!-- <div class="app-header">
+                  <h3>Oil Camp Attendent</h3>
+                  <p>A simple tool for housekeeping to keep track. Similar could be adapted for a hotel...</p>
+                </div> -->
+                <div class="carousel-wrapper">
+                  <carousel [interval]="6000" [noWrap]="false">
+                    <slide class="carousel-slide" *ngFor="let slide of gssSlides; let index=index" [active]="slide.active">
+                      <img [src]="slide.image" [alt]="slide.alt">
+                      <div class="carousel-caption">
+                        <h4>{{ slide.text }}</h4>
+                      </div>
+                    </slide>
+                  </carousel>
+                </div>
               </div>
-            </slide>
-          </carousel>
-        </div>
-      </div>
-  
-      <div class="carouselset">
-        <div class="header sub-header">
-          <p>Clean customer process forms:</p>
-        </div>
-        <div class="carousel-wrapper">
-          <carousel [interval]="6000" [noWrap]="false">
-            <slide class="carousel-slide" *ngFor="let slide of cwLockSlides; let index=index" [active]="slide.active">
-              <img [src]="slide.image" [alt]="slide.alt">
-              <div class="carousel-caption">
-                <h4>{{ slide.text }}</h4>
+        </accordion-group>
+        <accordion-group #colorMixerGroup heading="Color Mixer">
+            <div *ngIf="colorMixerGroup._isOpen" class="app-header">
+                <!-- <h3>Color Mixer</h3> -->
+                <p>Play with our <a href="https://csscolormixer.com/" target="_blank">color mixer</a> ! It's fun, but can be useful...</p>
+                <a href="https://csscolormixer.com/" target="_blank">
+                  <img *ngIf="deviceGroup=='phonesPortrait' || deviceGroup=='phonesLandscape' || deviceGroup=='iPadPortrait'" id="cssCMapp_img"
+                    src="../../assets/images/cssCMapp_mobile_flush.png" alt="CSS Color Mixer mobile example">
+                  <img *ngIf="deviceGroup=='bigPhoneLandscape' || deviceGroup=='iPadLandscape'" id="cssCMapp_img" src="../../assets/images/cssCMapp_tablet_flush.png"
+                    alt="CSS Color Mixer tablet example">
+                  <img *ngIf="deviceGroup=='desktop'" id="cssCMapp_img" src="../../assets/images/cssCMapp_laptop_flush.png" alt="CSS Color Mixer laptop example">
+                </a>
               </div>
-            </slide>
-          </carousel>
-        </div>
-      </div>
-  
-      <div class="carouselset">
-        <div class="header sub-header">
-          <p>Detail forms:</p>
-        </div>
-        <div class="carousel-wrapper">
-          <carousel [interval]="6000" [noWrap]="false">
-            <slide class="carousel-slide" *ngFor="let slide of cwDetailSlides; let index=index" [active]="slide.active">
-              <img [src]="slide.image" [alt]="slide.alt">
-              <div class="carousel-caption">
-                <h4>{{ slide.text }}</h4>
-              </div>
-            </slide>
-          </carousel>
-        </div>
-      </div>
-  
-      <div class="carouselset">
-        <div class="header sub-header">
-          <p>Data maintenance forms:</p>
-        </div>
-        <div class="carousel-wrapper">
-          <carousel [interval]="6000" [noWrap]="false">
-            <slide class="carousel-slide" *ngFor="let slide of cwMaintenanceSlides; let index=index" [active]="slide.active">
-              <img [src]="slide.image" [alt]="slide.alt">
-              <div class="carousel-caption">
-                <h4>{{ slide.text }}</h4>
-              </div>
-            </slide>
-          </carousel>
-        </div>
-      </div>
-  
-      <br>
-  
-      <div class="carouselset">
-        <div class="app-header">
-          <h3>Oil Camp Attendent</h3>
-          <p>A simple tool for housekeeping to keep track. Similar could be adapted for a hotel...</p>
-        </div>
-        <div class="carousel-wrapper">
-          <carousel [interval]="6000" [noWrap]="false">
-            <slide class="carousel-slide" *ngFor="let slide of gssSlides; let index=index" [active]="slide.active">
-              <img [src]="slide.image" [alt]="slide.alt">
-              <div class="carousel-caption">
-                <h4>{{ slide.text }}</h4>
-              </div>
-            </slide>
-          </carousel>
-        </div>
-      </div>
-  
-      <br>
-  
-      <div class="app-header">
-        <h3>Color Mixer</h3>
-        <p>Play with our <a href="https://csscolormixer.com/" target="_blank">color mixer</a> ! It's fun, but can be useful...</p>
-        <a href="https://csscolormixer.com/" target="_blank">
-          <img *ngIf="deviceGroup=='phonesPortrait' || deviceGroup=='phonesLandscape' || deviceGroup=='iPadPortrait'" id="cssCMapp_img"
-            src="../../assets/images/cssCMapp_mobile_flush.png" alt="CSS Color Mixer mobile example">
-          <img *ngIf="deviceGroup=='bigPhoneLandscape' || deviceGroup=='iPadLandscape'" id="cssCMapp_img" src="../../assets/images/cssCMapp_tablet_flush.png"
-            alt="CSS Color Mixer tablet example">
-          <img *ngIf="deviceGroup=='desktop'" id="cssCMapp_img" src="../../assets/images/cssCMapp_laptop_flush.png" alt="CSS Color Mixer laptop example">
-        </a>
-      </div>
+        </accordion-group>        
+            
+      </accordion>
+      
   
     </section>
   
