--- a/src/styles.css
+++ b/src/styles.css
@@ -5,18 +5,21 @@ body {
     font-family: "Gill Sans", Arial, sans-serif;
 }
 
-
+/* //// ACCORDION STUFF THAT CAN'T BE DONE IN COMPONENT \\\\ */
+accordion .panel {
+    background-color: transparent;
+}
 
 /* //// CAROUSEL STUFF THAT CAN'T BE DONE IN COMPONENT \\\\ */
 .carousel-caption {
-    background-color: #f3f3f3;
+    background-color: #f3f3f331;
     border-radius: 0 0 10px 10px;
     position: initial;
     height: 40px;
 }
 .carousel-caption h4, 
 .carousel-caption p {
-    color: #636363;
+    color: #d3d1d1;
     font-weight: 200;
     text-align: center;
     text-shadow: 0 0 0 rgba(0,0,0,.6);
@@ -32,7 +35,7 @@ body {
 
 .carousel-control span {
     top: calc(50% - 19px) !important;
-    color: #444;
+    color: rgb(209, 201, 201);
     font-size: 50px !important;
 }
 
