--- a/src/app/components/apps/apps.component.html
+++ b/src/app/components/apps/apps.component.html
@@ -1,177 +1,208 @@
 <div id="apps-container" class="darktheme page-container">
-  
-    <h1 class="page-header">LINKS &amp; SAMPLES</h1>
-    <hr>
-    <section id="external-links">
-      <h3>Some stuff to click around at</h3>
-      <h4>marketing sites for ODA:</h4>
-      <p>(we also did all the icons and graphics custom from scratch)</p>
-      <ul class="link-list">
-        <li>
-          <a href="https://www.site.work/">core marketing site</a>
-        </li>
-        <li>
-            <a href="https://www.site.work/rentals">equipment rentals</a>
-        </li>
-        <li>
-            <a href="https://www.site.work/stays">workforce accomodations and lodging</a>
-        </li>
-        <li>
-            <a href="https://www.site.work/forecast">accomodations forecasting services</a>
-        </li>
-        <li>
-            <a href="https://www.site.work/customize">generic "coming soon" site</a>
-        </li>
-      </ul>
 
-      <h4>Some contributions to the greater community:</h4>
-      <p>(mostly works in progress)</p>
-      <ul class="link-list">
-        <li>
-          <a href="https://scatterschool-dev.firebaseapp.com/">an open knowledge sharing network</a>
-        </li>
-        <li>
-          <a href="https://aid2assist-dev.firebaseapp.com/home">a direct charity donation service</a>
-        </li>
-        <li>
-          <a href="https://csscolormixer.com/">a fun and useful tool/game for designers</a>
-        </li>
-      </ul>
+  <h1 class="page-header">LINKS &amp; SAMPLES</h1>
+  <hr>
+  <section id="external-links">
+    <h3>Some stuff to click around at</h3>
+    <h4>marketing sites for ODA:</h4>
+    <p>(we also did all the icons and graphics custom from scratch)</p>
+    <ul class="link-list">
+      <li>
+        <a href="https://www.site.work/">core marketing site</a>
+      </li>
+      <li>
+        <a href="https://www.site.work/rentals">equipment rentals</a>
+      </li>
+      <li>
+        <a href="https://www.site.work/stays">workforce accomodations and lodging</a>
+      </li>
+      <li>
+        <a href="https://www.site.work/forecast">accomodations forecasting services</a>
+      </li>
+      <li>
+        <a href="https://www.site.work/customize">generic "coming soon" site</a>
+      </li>
+    </ul>
 
-      <p>Some of our more corporate clients:</p>
-      <ul class="link-list">
-        <li>
-          <a href="http://www.tstoregon.com/">Terraspatial Technologies</a>
-          <p>We've provided extensive consulting services, app updates, and helped bring some legacy projects into the light of the future</p>
-        </li>
-        <li>
-          <a href="http://www.ondemandanalysis.com/">On Demand Analysis</a>
-          <p>We've built two of their production apps, all of their core marketing materials, designed logos, and worked on various app updates</p>
-        </li>
-      </ul>
+    <h4>Some contributions to the greater community:</h4>
+    <p>(mostly works in progress)</p>
+    <ul class="link-list">
+      <li>
+        <a href="https://scatterschool-dev.firebaseapp.com/">an open knowledge sharing network</a>
+      </li>
+      <li>
+        <a href="https://aid2assist-dev.firebaseapp.com/home">a direct charity donation service</a>
+      </li>
+      <li>
+        <a href="https://csscolormixer.com/">a fun and useful tool/game for designers</a>
+      </li>
+    </ul>
 
-    </section>
-    <h1 class="page-header">APPS &amp; TOOLS</h1>
-    <hr>
-    <section>
-      
-      <p>Some apps and tools that saved time and made life better for clients</p>
-  
-      <br>
-      <accordion closeOthers="true">
-        <accordion-group #cwGroup heading="Community Warehouse">
-            <!-- <accordion-group #cwGroup (isOpenChange)="openChange($event, cwGroup)" heading="Community Warehouse"> -->
-          <accordion *ngIf="cwGroup._isOpen" closeOthers="true">
-            <div class="app-header">
-                <h3>Community Warehouse</h3>
+    <p>Some of our more corporate clients:</p>
+    <ul class="link-list">
+      <li>
+        <a href="http://www.tstoregon.com/">Terraspatial Technologies</a>
+        <p>We've provided extensive consulting services, app updates, and helped bring some legacy projects into the light of
+          the future</p>
+      </li>
+      <li>
+        <a href="http://www.ondemandanalysis.com/">On Demand Analysis</a>
+        <p>We've built two of their production apps, all of their core marketing materials, designed logos, and worked on various
+          app updates</p>
+      </li>
+    </ul>
+
+  </section>
+  <h1 class="page-header">APPS &amp; TOOLS</h1>
+  <hr>
+  <section>
+
+    <p>Some apps and tools that saved time and made life better for clients</p>
+
+    <br>
+    <mat-accordion>
+      <mat-expansion-panel #cwPanel (opened)="panelChanged(cwPanel)" (closed)="panelChanged(cwPanel)">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <h3>Community Warehouse</h3>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-accordion>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <h4>Filter functionality examples</h4>
+              </mat-panel-title>
+              <!-- <mat-panel-description>Rich and robust filtering functionality to quickly find the entries needed</mat-panel-description> -->
+            </mat-expansion-panel-header>
+            <div class="carouselset">
+              <div class="app-header">
+                <p>Rich and robust filtering functionality to quickly find the entries needed.</p>
+              </div>
+              <div class="carousel-wrapper">
+                <carousel [interval]="6000" [noWrap]="false">
+                  <slide class="carousel-slide" *ngFor="let slide of cwHomeSlides; let index=index" [active]="slide.active">
+                    <img [src]="slide.image" [alt]="slide.alt">
+                    <div class="carousel-caption">
+                      <h4>{{ slide.text }}</h4>
+                    </div>
+                  </slide>
+                </carousel>
+              </div>
             </div>
-            <accordion-group heading="Filter functionality examples">
-                <div class="carouselset">
-                    <div class="app-header">
-                      <p>Rich and robust filtering functionality to quickly find the entries needed.</p>
-                    </div>
-                    <div class="carousel-wrapper">
-                      <carousel [interval]="6000" [noWrap]="false">
-                        <slide class="carousel-slide" *ngFor="let slide of cwHomeSlides; let index=index" [active]="slide.active">
-                          <img [src]="slide.image" [alt]="slide.alt">
-                          <div class="carousel-caption">
-                            <h4>{{ slide.text }}</h4>
-                          </div>
-                        </slide>
-                      </carousel>
-                    </div>
-                  </div>
-            </accordion-group>
-            <accordion-group heading="Clean customer process forms">
-                <div class="carouselset">
-                    <div class="header sub-header">
-                      <p>Intuitive, touch-friendly forms for case managers to guide beneficiaries through warehouse floor picking process.</p>
-                    </div>
-                    <div class="carousel-wrapper">
-                      <carousel [interval]="6000" [noWrap]="false">
-                        <slide class="carousel-slide" *ngFor="let slide of cwLockSlides; let index=index" [active]="slide.active">
-                          <img [src]="slide.image" [alt]="slide.alt">
-                          <div class="carousel-caption">
-                            <h4>{{ slide.text }}</h4>
-                          </div>
-                        </slide>
-                      </carousel>
-                    </div>
-                  </div>
-            </accordion-group>
-            <accordion-group heading="Detail forms">
-                <div class="carouselset">
-                    <div class="header sub-header">
-                      <p>Easily go back and edit the details for a given request.</p>
-                    </div>
-                    <div class="carousel-wrapper">
-                      <carousel [interval]="6000" [noWrap]="false">
-                        <slide class="carousel-slide" *ngFor="let slide of cwDetailSlides; let index=index" [active]="slide.active">
-                          <img [src]="slide.image" [alt]="slide.alt">
-                          <div class="carousel-caption">
-                            <h4>{{ slide.text }}</h4>
-                          </div>
-                        </slide>
-                      </carousel>
-                    </div>
-                  </div>
-            </accordion-group>
-            <accordion-group heading="Data maintenance forms">
-                <div class="carouselset">
-                    <div class="header sub-header">
-                      <p>Administrative portal to update and maintain details about agencies and case managers.</p>
-                    </div>
-                    <div class="carousel-wrapper">
-                      <carousel [interval]="6000" [noWrap]="false">
-                        <slide class="carousel-slide" *ngFor="let slide of cwMaintenanceSlides; let index=index" [active]="slide.active">
-                          <img [src]="slide.image" [alt]="slide.alt">
-                          <div class="carousel-caption">
-                            <h4>{{ slide.text }}</h4>
-                          </div>
-                        </slide>
-                      </carousel>
-                    </div>
-                  </div>
-            </accordion-group>
-          </accordion>
-            
-        </accordion-group>
-        <accordion-group #oilCampGroup heading="Oil Camp Attendant">
-            <div *ngIf="oilCampGroup._isOpen" class="carouselset">
-                <div class="app-header">
-                  <h3>Oil Camp Attendent</h3>
-                  <p>A simple tool for housekeeping to keep track. Similar could be adapted for a hotel...</p>
-                </div>
-                <div class="carousel-wrapper">
-                  <carousel [interval]="6000" [noWrap]="false">
-                    <slide class="carousel-slide" *ngFor="let slide of gssSlides; let index=index" [active]="slide.active">
-                      <img [src]="slide.image" [alt]="slide.alt">
-                      <div class="carousel-caption">
-                        <h4>{{ slide.text }}</h4>
-                      </div>
-                    </slide>
-                  </carousel>
-                </div>
+          </mat-expansion-panel>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <h4>Clean customer process forms</h4>
+              </mat-panel-title>
+              <!-- <mat-panel-description>Intuitive, touch-friendly forms for case managers to guide beneficiaries through warehouse floor picking process -->
+              <!-- </mat-panel-description> -->
+            </mat-expansion-panel-header>
+            <div class="carouselset">
+              <div class="header sub-header">
+                <p>Intuitive, touch-friendly forms for case managers to guide beneficiaries through warehouse floor picking
+                  process.
+                </p>
               </div>
-        </accordion-group>
-        <accordion-group #colorMixerGroup heading="Color Mixer">
-            <div *ngIf="colorMixerGroup._isOpen" class="app-header">
-                <h3>Color Mixer</h3>
-                <p>Play with our <a href="https://csscolormixer.com/" target="_blank">color mixer</a> ! It's fun, but can be useful...</p>
-                <a href="https://csscolormixer.com/" target="_blank">
-                  <img *ngIf="deviceGroup=='phonesPortrait' || deviceGroup=='phonesLandscape' || deviceGroup=='iPadPortrait'" id="cssCMapp_img"
-                    src="../../assets/images/cssCMapp_mobile_flush.png" alt="CSS Color Mixer mobile example">
-                  <img *ngIf="deviceGroup=='bigPhoneLandscape' || deviceGroup=='iPadLandscape'" id="cssCMapp_img" src="../../assets/images/cssCMapp_tablet_flush.png"
-                    alt="CSS Color Mixer tablet example">
-                  <img *ngIf="deviceGroup=='desktop'" id="cssCMapp_img" src="../../assets/images/cssCMapp_laptop_flush.png" alt="CSS Color Mixer laptop example">
-                </a>
+              <div class="carousel-wrapper">
+                <carousel [interval]="6000" [noWrap]="false">
+                  <slide class="carousel-slide" *ngFor="let slide of cwLockSlides; let index=index" [active]="slide.active">
+                    <img [src]="slide.image" [alt]="slide.alt">
+                    <div class="carousel-caption">
+                      <h4>{{ slide.text }}</h4>
+                    </div>
+                  </slide>
+                </carousel>
               </div>
-        </accordion-group>        
-            
-      </accordion>
-      
-  
-    </section>
-  
-  </div>
-  
+            </div>
+          </mat-expansion-panel>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <h4>Detail Forms</h4>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="carouselset">
+              <div class="header sub-header">
+                <p>Easily go back and edit the details for a given request.</p>
+              </div>
+              <div class="carousel-wrapper">
+                <carousel [interval]="6000" [noWrap]="false">
+                  <slide class="carousel-slide" *ngFor="let slide of cwDetailSlides; let index=index" [active]="slide.active">
+                    <img [src]="slide.image" [alt]="slide.alt">
+                    <div class="carousel-caption">
+                      <h4>{{ slide.text }}</h4>
+                    </div>
+                  </slide>
+                </carousel>
+              </div>
+            </div>
+          </mat-expansion-panel>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <h4>Administrative back-ends</h4>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="carouselset">
+              <div class="header sub-header">
+                <p>Administrative portal to update and maintain details about agencies and case managers.</p>
+              </div>
+              <div class="carousel-wrapper">
+                <carousel [interval]="6000" [noWrap]="false">
+                  <slide class="carousel-slide" *ngFor="let slide of cwMaintenanceSlides; let index=index" [active]="slide.active">
+                    <img [src]="slide.image" [alt]="slide.alt">
+                    <div class="carousel-caption">
+                      <h4>{{ slide.text }}</h4>
+                    </div>
+                  </slide>
+                </carousel>
+              </div>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <h3>Oil Camp Attendant</h3>
+        </mat-expansion-panel-header>
+        <!-- <ng-template matExpansionPanelContent> -->
+        <div class="carouselset">
+          <div class="app-header">
+            <!-- <h3>Oil Camp Attendent</h3> -->
+            <p>A simple tool for housekeeping to keep track. Similar could be adapted for a hotel...</p>
+          </div>
+          <div class="carousel-wrapper">
+            <carousel [interval]="6000" [noWrap]="false">
+              <slide class="carousel-slide" *ngFor="let slide of gssSlides; let index=index" [active]="slide.active">
+                <img [src]="slide.image" [alt]="slide.alt">
+                <div class="carousel-caption">
+                  <h4>{{ slide.text }}</h4>
+                </div>
+              </slide>
+            </carousel>
+          </div>
+        </div>
+        <!-- </ng-template> -->
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <h3>CSS Color Mixer</h3>
+        </mat-expansion-panel-header>
+        <div class="app-header">
+          <p>Play with our
+            <a href="https://csscolormixer.com/" target="_blank">color mixer</a> ! It's fun, but can be useful...</p>
+          <a href="https://csscolormixer.com/" target="_blank">
+            <img *ngIf="deviceGroup=='phonesPortrait' || deviceGroup=='phonesLandscape' || deviceGroup=='iPadPortrait'" id="cssCMapp_img"
+              src="../../assets/images/cssCMapp_mobile_flush.png" alt="CSS Color Mixer mobile example">
+            <img *ngIf="deviceGroup=='bigPhoneLandscape' || deviceGroup=='iPadLandscape'" id="cssCMapp_img" src="../../assets/images/cssCMapp_tablet_flush.png"
+              alt="CSS Color Mixer tablet example">
+            <img *ngIf="deviceGroup=='desktop'" id="cssCMapp_img" src="../../assets/images/cssCMapp_laptop_flush.png" alt="CSS Color Mixer laptop example">
+          </a>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </section>
+
+</div>
